[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "colorama==0.4.6",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fastapi==0.115.13",
    "fastmcp>=2.10.6",
    "flask==3.1.1",
    "flask-cors==6.0.1",
    "flask-sock==0.7.0",
    "fonttools==4.58.2",
    "gevent==25.5.1",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-generativeai>=0.8.5",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwisolver==1.4.8",
    "lightgbm==4.6.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "mcp>=1.13.1",
    "modelcontextprotocol==0.1.0",
    "narwhals==1.43.0",
    "nest-asyncio>=1.6.0",
    "numpy==2.3.0",
    "packaging==24.2",
    "pandas==2.3.0",
    "pillow==11.2.1",
    "pyarrow==20.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydeck==0.9.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==311",
    "referencing==0.36.2",
    "requests==2.32.4",
    "rich>=14.1.0",
    "rpds-py==0.25.1",
    "scikit-learn==1.7.0",
    "scipy==1.15.3",
    "seaborn==0.13.2",
    "setuptools==80.9.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "streamlit==1.46.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "toml==0.10.2",
    "tornado==6.5.1",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.3",
    "vercel>=0.2.1",
    "watchdog==6.0.0",
    "websocket==0.2.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
    "zope-event==5.0",
    "zope-interface==7.2",
]
